// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skeleton/> applies custom className 1`] = `
<div
  class="animate-pulse rounded-md bg-gradient-to-r from-gray-200 dark:bg-gray-200 custom-class"
/>
`;

exports[`<Skeleton/> passes through additional props 1`] = `
<div
  class="animate-pulse rounded-md bg-gradient-to-r from-gray-200 dark:bg-gray-200"
  data-testid="skeleton-test"
/>
`;

exports[`<Skeleton/> renders correctly 1`] = `
<div
  class="animate-pulse rounded-md bg-gradient-to-r from-gray-200 dark:bg-gray-200"
/>
`;
